--- a/templates/company/_form-companies.html.twig
+++ b/templates/company/_form-companies.html.twig
@@ -30,7 +30,7 @@
                 {% endif %}
                 {{ include('_mem_trick.html.twig') }}
                 
-                <table class="table table-striped">
+                <table class="table table-hover table-striped">
                     <thead class="thead--dark">
                         <tr>
                             <th>Choisir</th>
