--- a/templates/flatrate/index.html.twig
+++ b/templates/flatrate/index.html.twig
@@ -12,10 +12,15 @@
     <h2 class="title--h2">Vous servir... au juste prix !</h2>
     <div class="card--3D-horizontal">
         <p class="col-md-12 col-lg-8">
-            Les tarifs présentés ici sont <u>indicatifs</u>, ils sont déterminés sur la moyenne de ceux pratiqués par l'ensemble de la profession, pour la région associée.
+            Les tarifs présentés ici sont <u>indicatifs</u>, ils sont déterminés sur la moyenne de ceux pratiqués par l'ensemble de la profession.
             Ils ont été proposés par les professionnels référencés dans cet annuaire, selon leurs habitudes.
             Suite à votre demande, les pilotes vous proposeront un devis détaillé pouvant légèrement varier par rapport à la grille tarifaire ci-dessous, selon les heures, vos bagages, etc... 
             <br>
+            Par exemple, une majoration pour les heures de nuits, les dimanches et jours fériés peut être appliquée.
+            <br>
+            De même, au-delà de 10min de retard votre part, par rapport à l’horaire initial de prise en charge, il peut vous être facturé 1 euro par minute.
+            De plus, dans ce cas, la responsabilité du chauffeur ne peut être engangé en cas de rendez-vous manqué sur le lieu de dépose, la conduite dans le respect des règles de sécurité faisant loi.
+            <br><br>
             Concernant les modes de paiement, tous les chauffeurs ne disposent pas d'appareils permettant les paiement par carte bancaire.
             Pensez à communiquer préalablement afin de vous munir du mode de paiement qui conviendra.
         </p>
@@ -28,7 +33,7 @@
 <section class="paragraph--large">
     <h2 class="title--h2">Les tarifs...</h2>
 
-    <table class="table table-striped">
+    <table class="table table-hover table-striped">
         <thead class="thead--dark">
             <tr>
                 <th style="width:5%;"></th>
