--- a/templates/admin/_banner.html.twig
+++ b/templates/admin/_banner.html.twig
@@ -21,7 +21,7 @@
             <a class="btn nav--btn--blue" href="{{ path('admin_remarkableplace_read') }}">Les lieux remarquables</a>
             <a class="btn nav--btn--blue" href="{{ path('admin_flatrate_read') }}">Les tarifs</a>
             <a class="btn nav--btn--blue" href="{{ path('admin_socialreason_settings') }}">Raisons sociales & TVA</a>
-            <a class="btn nav--btn--white" href="{{ path('admin_registered') }}">Les inscrits</a>
+            {#<!-- <a class="btn nav--btn--white" href="{{ path('admin_registered') }}">Les inscrits</a> -->#}
             <!-- <a class="btn nav--btn--blue" href="#section--customers">Les clients</a> -->
             <!-- <a class="btn nav--btn--blue" href="#section--drivers">Les pilotes</a> -->
             {#<!-- <a class="btn nav--btn--blue" href="{{ path('company_read') }}">Les T3P</a> -->#}
