--- a/templates/admin/pending.html.twig
+++ b/templates/admin/pending.html.twig
@@ -16,7 +16,7 @@
         <!-- Tableau des actions attendues concernant les demandes de référencement... -->
         <!-- ... des T3P -->
         <div class="paragraph--large">
-            <table class="table table-striped">
+            <table class="table table-hover table-striped">
                 <h2 class="title--h2">T3P nouvellement référencée(s) à confirmer...</h2>
                 <thead class="thead--dark">
                     <tr>
@@ -78,7 +78,7 @@
 
         <!-- ... des pilotes -->
         <div class="paragraph--large">
-            <table class="table table-striped">
+            <table class="table table-hover table-striped">
                 <h2 class="title--h2">Pilote(s) nouvellement référencé(s) à vérifier...</h2>
                 <thead class="thead--dark">
                     <tr>
@@ -129,7 +129,7 @@
         <!-- Tableau des Company "référencées" -->
         {% set allcompaniesknown=getknowncompanies() %}
         <div class="paragraph--large">
-            <table class="table table-striped">
+            <table class="table table-hover table-striped">
                 <h2 class="title--h2">T3P référencées et vérifiées</h2>
                 <thead class="thead--dark">
                     <tr>
