--- a/templates/claim/_card.html.twig
+++ b/templates/claim/_card.html.twig
@@ -1,6 +1,6 @@
 
 <h3 class="pb-1">{{ 'Demande : (#'~claim.id~')' }}</h3>
-<table class="table table-striped">
+<table class="table table-hover table-striped">
     <tbody>
         <tr>
             <th class="thead--dark">Date de la demande</th>
