--- a/templates/remarkableplace/_form.html.twig
+++ b/templates/remarkableplace/_form.html.twig
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <table class="table table-striped">
+    <table class="table table-hover table-striped">
         <thead class="thead--dark">
             <tr>
                 <th style="width:2%;"></th>
