--- a/templates/socialreason/update.html.twig
+++ b/templates/socialreason/update.html.twig
@@ -45,7 +45,7 @@
 
     <!-- Tableaux des associations -->
     <div class="paragraph--large">
-        <table class="table table-striped">
+        <table class="table table-hover table-striped">
             <h2 class="title--h2">Associations Raison sociale / Taux de TVA</h2>
             <thead class="thead--dark">
                 <tr>
