--- a/templates/tender/create.html.twig
+++ b/templates/tender/create.html.twig
@@ -304,7 +304,7 @@
         </div>
         <!-- Block Tableau des Flatrates (Forfaits) -->
         {% if flatrates is defined and flatrates is not null %}
-        <table class="table table-striped" id="tbl--flatrates">
+        <table class="table table-hover table-striped" id="tbl--flatrates">
             <thead class="thead--dark">
                 <tr class="TOUTES">
                     <th></th>
