--- a/templates/typeplace/_form.html.twig
+++ b/templates/typeplace/_form.html.twig
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <table class="table table-striped">
+    <table class="table table-hover table-striped">
         <thead class="thead--dark">
             <tr>
                 <th style="width:10%;"></th>
