--- a/templates/typeplace/read.html.twig
+++ b/templates/typeplace/read.html.twig
@@ -16,7 +16,7 @@
             <i class="ri-add-circle-line"></i>&ensp;Ajouter un nouveau "type de lieu"
         </a>
     </div>
-    <table class="table table-striped">
+    <table class="table table-hover table-striped">
         <thead class="thead--dark">
             <tr>
                 <th style="width:25%;"></th>
